--- a/EW/AircraftGuns.cfg
+++ b/EW/AircraftGuns.cfg
@@ -11,6 +11,7 @@
 	@mass = 0.0809
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Ford M39 cannon is a 20 mm calibre single-barrelled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = M39A1
 		@roundsPerMinute = 1500
@@ -33,6 +34,7 @@
 	@mass = 0.0809
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Ford M39 cannon is a 20 mm calibre single-barrelled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = M39A1
 		@roundsPerMinute = 1500
@@ -56,6 +58,7 @@
 	@mass = 0.06
 	@manufacturer = Kerbal Kombat Anthology
 	@description = During World War II, a faster-firing Browning was developed for aircraft use. The AN/M3 increased the rate of fire to around 1,200 rounds per minute, while firing the same round with minimal change in weight or size. The AN/M3 was used in Korea on the P-51D-30, F-82 Twin Mustang, F-86 Sabre, F-84 Thunderjet and F-80 Shooting Star, and in Vietnam in the XM14/SUU-12/A gun pod.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = AN/M3
 		@roundsPerMinute = 890
@@ -78,6 +81,7 @@
 	@mass = 0.06
 	@manufacturer = Kerbal Kombat Anthology
 	@description = During World War II, a faster-firing Browning was developed for aircraft use. The Browning AN/M3 increased the rate of fire to around 1,200 rounds per minute, while firing the same round with minimal change in weight or size. The AN/M3 was used in Korea on the P-51D-30, F-82 Twin Mustang, F-86 Sabre, F-84 Thunderjet and F-80 Shooting Star, and in Vietnam in the XM14/SUU-12/A gun pod.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = AN/M3
 		@roundsPerMinute = 890
@@ -101,6 +105,7 @@
 	@mass = 0.092
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Royal Small Arms Factory ADEN is a 30mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = ADEN
 		@roundsPerMinute = 1700
@@ -123,6 +128,7 @@
 	@mass = 0.092
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Royal Small Arms Factory ADEN is a 30mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = ADEN
 		@roundsPerMinute = 1700
@@ -146,6 +152,7 @@
 	@mass = 0.085
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30mm calibre NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = DEFA
 		@roundsPerMinute = 1700
@@ -168,6 +175,7 @@
 	@mass = 0.085
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30mm calibre NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = DEFA
 		@roundsPerMinute = 1700
@@ -190,7 +198,8 @@
 	@title = N-37
 	@mass= 0.103
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman N-37 was a 37 mm aircraft auto-cannon used by the Soviet Union. The N-37 was a sizeable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards.
+	@description = The Nudelman N-37 was a 37 mm aircraft auto-cannon used by the Soviet Union. The N-37 was a sizeable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards..
+	@author = Toonu
 	@MODULE[ModuleWeapon] {	
 		@shortName = N-37
 		@roundsPerMinute = 400
@@ -213,6 +222,7 @@
 	@mass= 0.103
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Nudelman N-37 was a 37 mm aircraft auto-cannon used by the Soviet Union. The N-37 was a sizeable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {	
 		@shortName = N-37
 		@roundsPerMinute = 400
@@ -236,6 +246,7 @@
 	@mass = 0.037
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = NS-23
 		@roundsPerMinute = 850
@@ -258,6 +269,7 @@
 	@mass = 0.037
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Nudelman-Rikhter NS-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = NR-23
 		@roundsPerMinute = 850
@@ -281,6 +293,7 @@
 	@mass = 0.066
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = NR-30
 		@roundsPerMinute = 1000
@@ -303,6 +316,7 @@
 	@mass = 0.066
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = NR-30
 		@roundsPerMinute = 1000
@@ -326,6 +340,7 @@
 	@mass = 0.112
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The General Electric M61A1 is an American rotary cannon widely used in military aircraft of the USAF.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = M61A1
 		@roundsPerMinute = 6000
@@ -347,6 +362,7 @@
 	@mass = 0.112
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The General Electric M61A1 is an American rotary cannon widely used in military aircraft of the USAF.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = M61A1
 		@roundsPerMinute = 6000
@@ -370,12 +386,13 @@
 	@mass = 0.050
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Gryazev-Shipunov 9A472/GSh-23/TKB-613/AO-9 is a twin-barrelled 23 mm auto-cannon developed in the Soviet Union. It entered service in 1965, replacing the earlier Nudelman-Rikhter NR-23 cannon.
+	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = GSh-23L
 		@roundsPerMinute = 3600
 		@bulletVelocity = 715
-		@bulletType = 23x152mmHEBullet; 25x115mmBullet
 		@ammoName = 23mm
+		@bulletType = 23x152mmHEBullet; 25x115mmBullet
 		
 		%useCustomBelt = True
 		%ammoBelt = 25x115mmBullet; 23x152mmHEBullet; 23x152mmHEBullet; 23x152mmHEBullet;
