--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -74,11 +74,12 @@
 	@bulletMass = 0.4
 	@apBulletMod = 0.42
     @tntMass = 0.031
+	@incendiary = True
 }
 @BULLET[30x165K]:NEEDS[SMA] {
 	@bulletVelocity = 900
-	@bulletMass = 0.4
-	@apBulletMod = 0.5
+	@bulletMass = 0.5
+	@apBulletMod = 1.5
 }
 @BULLET[30mmBullet]:NEEDS[SMA] {
 	@tntMass = 0.026
