--- a/EW/Balancing/MM_FDC.cfg
+++ b/EW/Balancing/MM_FDC.cfg
@@ -19,6 +19,10 @@
             key = 6 20 5.648911 5.854553          
         } 
     }
+	@MODULE[ModuleWeapon] {
+		%useCustomBelt = True    
+		%ammoBelt = 40mmElden42BAP; 40mmElden484HEPR; 40mmElden484HEPR; 40mmElden484HEPR;
+	}
 }
 @PART[Strids74]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
@@ -74,12 +78,21 @@
 @PART[M3Bradly]:NEEDS[SMA] {
 	@title = M3 Bradley CFV
 	-MODULE[ModuleRadar] {}
+	
+	@MODULE[ModuleWeapon] {
+		%useCustomBelt = True    
+		%ammoBelt = M791APDS; M791APDS; M791APDS; M792HEI
+	}
 }
 @PART[Obj906]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
 }
 @PART[M42DusterAP]:NEEDS[SMA] {
 	@title = M42 Duster
+	@MODULE[ModuleWeapon] {
+		%useCustomBelt = True    
+		%ammoBelt = 40MMAPT; 40MMHEFIT; 40MMHEFIT; 40MMHEFIT
+	}
 }
 @PART[T95]:NEEDS[SMA] {
 	@title = T28 Super Heavy Tank
@@ -93,6 +106,16 @@
 @PART[PantherII]:NEEDS[SMA] {
 	@title = Panther II
 }
+@PART[Luft42]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%useCustomBelt = True    
+		%ammoBelt = 40mmLuft42AP; 40mmLuft42HE; 40mmLuft42HE; 40mmLuft42HE
+	}
+}
+
+
+
+
 @PART[BMP3HE]:NEEDS[SMA] {
 	@title = 2A70 (BMP-3)
 	@description = The Object 688M / BMP-3 Soviet and Russian infantry fighting vehicle turret armed with 2A70 100mm gun as part of the 2K23 Complex. BMP-3 is a successor to the BMP-1 and BMP-2. The abbreviation BMP stands for boevaya mashina pehoty (боевая машина пехоты, literally "infantry combat vehicle").
@@ -128,7 +151,6 @@
 		%shortName = 85mm D-58
 	}
 }
-
 @PART[T-10]:NEEDS[SMA] {
 	@title = 52PT471N (T-10)
 	@description = The Object 730 / T-10 / IS-5 / IS-8 / IS-9 / IS-10 heavy tank turret armed with the 122mm 52PT471N / D-25TS gun was a Soviet heavy tank of the Cold War, the final development of the IS tank series. During development, it was called IS-8 and IS-9. It was accepted into production in 1952 as the IS-10 (Iosif Stalin, Russian form of Joseph Stalin), but due to the political climate in the wake of Stalin's death in 1953, it was renamed T-10.
