--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -8,7 +8,10 @@
 	@description = The Norinco Type 89 Heavy Machine Gun is designed in the People's Republic of China and fires the Soviet 12.7×108mm ammunition.
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm QJZ 89
-		@bulletType = 12.7x108mmBullet
+		@bulletType = 12.7x108mmBullet; 12.7x108mmBulletHE
+		
+		%useCustomBelt = True    
+		%ammoBelt =  12.7x108mmBullet;  12.7x108mmBullet;  12.7x108mmBullet; 12.7x108mmBulletHE;
 	}
 }
 @PART[CH-100MM]:NEEDS[SMA] {
@@ -247,6 +250,11 @@
 	@description = The Norinco Type 08 / ZBL-08 (08式轮式装甲车族) wheeled infantry fighting vehicle commissioned in 2009. It uses 30mm ZPT-99 cannon and optionally a HJ-73 ATGM.
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm ZPT-99
+		@bulletType = 30x165Bullet; 30MM-Intelligent
+		
+		%useCustomBelt = True    
+		%ammoBelt = 30x165Bullet; 30x165Bullet; 30x165Bullet, 30MM-Intelligent
+		
 	}
 	MODULE {
 		name = ModuleCASE
@@ -290,6 +298,11 @@
 	@description = The Mauser / Rheinmetall BK 27 27mm calibre revolver cannon developed in the late 1960s for the MRCA (Multi Role Combat Aircraft) program that ultimately became the Panavia Tornado. The BK 27 is a gas-operated cannon firing a new series of 27×145 mm cartridges with a typical round weight of 516 g. 
 	@MODULE[ModuleWeapon] {
 		%shortName = 27mm BK 27
+		
+		@bulletType = 27×145HEBullet; 27x145APBullet
+		
+		%useCustomBelt = True    
+		%ammoBelt =  27×145HEBullet; 27×145HEBullet; 27x145APBullet; 27x145APBullet;
 	}
 }
 @PART[CROWS7.62]:NEEDS[SMA] {
@@ -311,6 +324,9 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 20mm HS.404
 		@bulletType = 20x110mmAPShell; 20x110mmHEShell
+		
+		%useCustomBelt = True    
+		%ammoBelt =  20x110mmAPShell; 20x110mmAPShell; 20x110mmHEShell; 20x110mmHEShell; 20x110mmAPShell;
 	}
 }
 @PART[METEOR]:NEEDS[SMA] {
@@ -327,6 +343,9 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 20mm MG 151/20
 		@bulletType = 20x82mmAPShell; 20x82mmMGShell
+		
+		%useCustomBelt = True    
+		%ammoBelt =  20x82mmAPShell; 20x82mmAPShell; 20x82mmMGShell; 20x82mmMGShell; 20x82mmAPShell;
 	}
 }
 @PART[MICA_IR]:NEEDS[SMA] {
@@ -341,6 +360,11 @@
 	@description = The Rheinmetall-Borsig MK 103 30mm calibre German cannon mounted on German combat aircraft during World War II developed from the MK 101. Compared to the MK 101 it was faster firing, and was originally intended to develop a higher muzzle velocity than the MK 101. Later in the war the MK 103 was also used as a ground-based anti-aircraft (AA) weapon, using single or dual mounts. It was also used as a flak auto-cannon in the Flakpanzer IV "Kugelblitz".
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm MK 103
+		
+		@bulletType = 30x173Bullet; 30x173HEBullet
+		
+		%useCustomBelt = True    
+		%ammoBelt =  30x173Bullet; 30x173Bullet; 30x173HEBullet; 30x173HEBullet; 30x173Bullet;
 	}
 }
 @PART[VickersMG]:NEEDS[SMA] {
@@ -348,7 +372,10 @@
 	@description = The Vickers 7.7mm Machine Gun of the British Army. Not to be confused with the Maxim machine gun, it was in service from before the First World War until the 1960s, with air-cooled versions of it on many Allied World War I fighter aircraft.
 	@MODULE[ModuleWeapon] {
 		%shortName = 7.7mm Vickers MG
-		@bulletType = 7.7x56RmmBullet
+		@bulletType = 7.7x56RmmBullet; 7.7x56RmmBulletHEI
+		
+		%useCustomBelt = True
+		%ammoBelt = 7.7x56RmmBullet; 7.7x56RmmBullet; 7.7x56RmmBullet; 7.7x56RmmBulletHEI;
 	}
 }
 
@@ -471,10 +498,15 @@
 		%shortName = 30mm 9A623 GSh-30-2
 		@weaponType = ballistic
 		
-			%engageAir = true
-			%engageMissile = false
-			%engageGround = true
-			%engageSLW = false
+		@bulletType = 30x165K; 30x165HE
+		
+		%useCustomBelt = True    
+		%ammoBelt =  30x165K; 30x165K; 30x165K; 30x165HE;
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
 	}
 }
 @PART[GSH301]:NEEDS[SMA] {
@@ -488,10 +520,15 @@
 		%shortName = 30mm 9A4071K GSh-30-1
 		@weaponType = ballistic
 		
-			%engageAir = true
-			%engageMissile = false
-			%engageGround = false
-			%engageSLW = false
+		@bulletType = 30x165HE; 30x165K
+		
+		%useCustomBelt = True    
+		%ammoBelt =  30x165HE; 30x165HE; 30x165HE; 30x165K;
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 @PART[HeavyERA]:NEEDS[SMA] {
@@ -528,12 +565,15 @@
 	@description = The V.A. 6P50-1 "Kord" 12.7mm heavy machine gun on bi-pod 6T19 Russian design that entered service in 1998, replacing the older NSV machine gun.
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm 6P50-1 Kord
-		@bulletType = 12.7x108mmBullet
+		@bulletType = 12.7x108mmBullet; 12.7x108mmBulletHE
 		
-			%engageAir = true
-			%engageMissile = false
-			%engageGround = true
-			%engageSLW = false
+		%useCustomBelt = True    
+		%ammoBelt =  12.7x108mmBulle; 12.7x108mmBulletHE;
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
 	}
 }
 @PART[O120]:NEEDS[SMA] {
@@ -577,6 +617,9 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 20mm 56P533 ShVAK
 		@bulletType = 20x99mmBZShell; 20x99mmOZShell
+		
+		%useCustomBelt = True    
+		%ammoBelt =  20x99mmBZShell; 20x99mmBZShell; 20x99mmOZShell; 20x99mmOZShell; 20x99mmBZShell;
 	}
 }
 @PART[SS-26]:NEEDS[SMA] {
@@ -593,6 +636,11 @@
 	
 	@MODULE[ModuleWeapon] {
 		%shortName = 23mm 9A4454 NPPU-24 Turret
+		
+		@bulletType = 23x152mmHEBullet; 25x115mmBullet
+		
+		%useCustomBelt = True
+		%ammoBelt = 25x115mmBullet; 23x152mmHEBullet; 23x152mmHEBullet; 23x152mmHEBullet;
 	}
 }
 @PART[UPK-23]:NEEDS[SMA] {
@@ -601,6 +649,11 @@
 	
 	@MODULE[ModuleWeapon] {
 		%shortName = 23mm UPK-23-250
+		
+		@bulletType = 23x152mmHEBullet; 25x115mmBullet
+		
+		%useCustomBelt = True
+		%ammoBelt = 25x115mmBullet; 23x152mmHEBullet; 23x152mmHEBullet; 23x152mmHEBullet;
 	}
 }
 @PART[VA-111]:NEEDS[SMA] {
@@ -651,7 +704,10 @@
 	
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm M151 RWS
-		@bulletType = 12.7x99mmBullet
+		@bulletType = 12.7x99mmBullet; 50BMG
+		
+		%useCustomBelt = True    
+		%ammoBelt =  12.7x99mmBullet; 50BMG;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -665,6 +721,9 @@
 		%shortName = 30mm M151 RWS
 		@bulletType = 30x173Bullet; 30x173HEBullet
 		
+		%useCustomBelt = True    
+		%ammoBelt =  30x173Bullet; 30x173Bullet; 30x173HEBullet;
+		
 		%engageAir = true
 		%engageMissile = false
 		%engageGround = true
@@ -676,6 +735,9 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm M2HB HMG
 		@bulletType = 12.7x99mmBullet; 12.7x81SRmmBulletAP
+		
+		%useCustomBelt = True    
+		%ammoBelt =  12.7x99mmBullet; 12.7x81SRmmBulletAP;
 	}
 }
 @PART[TOW2B]:NEEDS[SMA] {
