--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -164,6 +164,11 @@
 		%shortName = 12.7mm M2HB HMG
 		@weaponType = ballistic
 		
+		@bulletType = 20x102mmBullet; 20x102mmHEBullet
+		
+		%useCustomBelt = True    
+		%ammoBelt = 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmHEBullet; 20x102mmHEBullet;
+		
 		%engageAir = false
 		%engageMissile = false
 		%engageGround = true
@@ -304,6 +309,11 @@
 		%shortName = 30mm 2A42
 		@weaponType = ballistic
 		
+		@bulletType = 30x165Bullet; 30x165HE
+		
+		%useCustomBelt = True    
+		%ammoBelt = 30x165Bullet; 30x165Bullet; 30x165Bullet; 30x165HE;
+		
 		%engageAir = true
 		%engageMissile = false
 		%engageGround = true
@@ -364,6 +374,10 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 25mm M242 Chain gun
 		@weaponType = ballistic
+		@bulletType = M791APDS; M792HEI
+		
+		%useCustomBelt = True    
+		%ammoBelt = M791APDS; M791APDS; M791APDS; M792HEI
 		
 		%engageAir = true
 		%engageMissile = false
@@ -457,6 +471,11 @@
 		%shortName = 30mm L21A1 RARDEN
 		@weaponType = ballistic
 		
+		@bulletType = 30x173Bullet; 30x173HEBullet
+		
+		%useCustomBelt = True    
+		%ammoBelt = 30x173Bullet; 30x173Bullet; 30x173Bullet; 30x173HEBullet;
+		
 		%engageAir = true
 		%engageMissile = false
 		%engageGround = true
@@ -513,10 +532,13 @@
 		%shortName = 12.7mm GAU-19/A
 		@weaponType = ballistic
 		
-		%bulletType = 12.7x99mmBullet
+		%bulletType = 12.7x99mmBullet; 12.7x81SRmmBulletAP
 		-bulletMass = a
 		-bulletVelocity = a
 		@ammoName = 50CalAmmo
+		
+		%useCustomBelt = True    
+		%ammoBelt = 12.7x99mmBullet; 12.7x81SRmmBulletAP;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -614,7 +636,10 @@
 		-bulletMass = 4.25e-4
 		-bulletVelocity = 883
 		@ammoName = 7.7x56Ammo
-		@bulletType = 7.7x56RmmBullet
+		@bulletType = 7.7x56RmmBullet; 7.7x56RmmBulletHEI
+		
+		%useCustomBelt = True    
+		%ammoBelt = 7.7x56RmmBullet; 7.7x56RmmBulletHEI;
 	
 		%engageAir = false
 		%engageMissile = false
@@ -652,6 +677,10 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 20mm M168
 		@weaponType = ballistic
+		
+		@bulletType = 20x102mmHEBullet; 20x102mmBullet
+		%useCustomBelt = True    
+		%ammoBelt = 20x102mmHEBullet; 20x102mmHEBullet; 20x102mmHEBullet; 20x102mmBullet;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -918,9 +947,12 @@
 		%shortName = 23mm 2A10 Amur
 		@weaponType = ballistic
 		
-		@bulletType = 23x152mmHEBullet
+		@bulletType = 23x152mmHEBullet; 23x152mmAPBullet
 		@roundsPerMinute = 1000
 		@heatPerShot = 10
+		
+		%useCustomBelt = True    
+		%ammoBelt = 23x152mmHEBullet; 23x152mmHEBullet; 23x152mmHEBullet; 23x152mmAPBullet;
 
 		%engageAir = true
 		%engageMissile = false
@@ -1036,12 +1068,15 @@
 		%shortName = 30mm 2А38
 		@weaponType = ballistic
 		
-		%bulletType = 30mm3UOF8
+		%bulletType = 30mm3UOF8; 30MM-Intelligent
 		-bulletMass = a
 		-bulletVelocity = a
 		-startColor = a
 		-nonTracerWidth = a
 		-projectileColor = a
+		
+		%useCustomBelt = True    
+		%ammoBelt = 30MM-Intelligent; 30mm3UOF8; 30mm3UOF8; 30mm3UOF8;
 
 		@heatPerShot = 44
 		%engageAir = true
