--- a/EW/Bullets.cfg
+++ b/EW/Bullets.cfg
@@ -1,3 +1,26 @@
+
+
+
+BULLET {
+    name = 27x145APBullet
+	caliber = 27
+	bulletVelocity = 1150
+	bulletMass = 0.22
+	//HE Bullet Values
+	explosive = False
+	incendiary = True
+	tntMass = 0
+	fuzeType = None 
+	projectileColor = 254, 185, 0, 160 //RGBA 0-255 
+	fadeColor = False
+	startColor = 254, 185, 25, 120
+	subProjectileCount = 1
+	apBulletMod = 1.2
+	bulletDragTypeName = AnalyticEstimate
+	
+}
+
+
 BULLET {
 	name = 30mm3UOF8
 	caliber = 30
