--- a/EW/Categories.cfg
+++ b/EW/Categories.cfg
@@ -310,7 +310,7 @@ SUBCATEGORY {
     FILTER {
 		CHECK {
 			type = name
-			value = NAS_BC_283x3_KM, AK100a18, AK130turret, AK176, AK190, CH-100MM, H/PJ-38, NAS_CB_12inx3Mk8_USN, NAS_BB_BL14Mk7x4_RN, NAS_FD_356FortDrum_USA, NAS_BB_356x2_IJN, NAS_BB_380M1935x4_FNFL, NAS_BB_BL15Mk1x2_RN, NAS_BB_380x2_KM, NAS_BB_381x3_RM, NAS_BB_406x3Mk7_USN, NAS_BB_410x2_IJN, NAS_BB_BL16MkIx3_RN, NAS_BB_460x3_IJN, NAS_AA_SC_90A1938_RM, NAS_AA_SC_3inchMark21_USN, NAS_CD_105SKL40_CN, NAS_DD_QF45_RN, NAS_DD_127_USN, NAS_DD_127x2_IJN, NAS_DD_127x2_USN, NAS_DD_130B-2LM_SN, NAS_CL_152x3Mk16_USN, NAS_CL_155x3_IJN, NAS_CL_BL6inMk21x2_ROCN, NAS_CL_KN152_ROCN, NAS_CL_140x2_IJN, NAS_CA_180B-1-P_SN, NAS_CA_203x2_IJN, NAS_CA_203x2_KM, Rail176, NAS_CA_203x3Mk16_USN, theotomelara76compact, theotomelara76rapid
+			value = NAS_BC_283x3_KM, AK100a18, AK130turret, AK176, AK190, CH-100MM, H/PJ-38, NAS_CB_12inx3Mk8_USN, NAS_BB_BL14Mk7x4_RN, NAS_FD_356FortDrum_USA, NAS_BB_356x2_IJN, NAS_BB_380M1935x4_FNFL, NAS_BB_BL15Mk1x2_RN, NAS_BB_380x2_KM, NAS_BB_381x3_RM, NAS_BB_406x3Mk7_USN, NAS_BB_410x2_IJN, NAS_BB_BL16MkIx3_RN, NAS_BB_460x3_IJN, NAS_AA_SC_90A1938_RM, NAS_AA_SC_3inchMark21_USN, NAS_CD_105SKL40_CN, NAS_DD_QF45_RN, NAS_DD_127_USN, NAS_DD_127x2_IJN, NAS_DD_127x2_USN, NAS_DD_130B-2LM_SN, NAS_CL_152x3Mk16_USN, NAS_CL_155x3_IJN, NAS_CL_BL6inMk21x2_ROCN, NAS_CL_KN152_ROCN, NAS_CL_140x2_IJN, NAS_CA_180B-1-P_SN, NAS_CA_203x2_IJN, NAS_CA_203x2_KM, Rail176, NAS_CA_203x3Mk16_USN, theotomelara76compact, theotomelara76rapid, NAS.AA.SC.105SKC33.KM, NAS.AA.DD.100x2.IJN
 		}
     }
 }
