--- a/EW/Balancing/MM_BDA.cfg
+++ b/EW/Balancing/MM_BDA.cfg
@@ -7,6 +7,10 @@
     @title = M2 Turret
 	
 	@MODULE[ModuleWeapon] {
+		%useCustomBelt = True    
+		%ammoBelt = 12.7mmBullet; 12.7mmAPIBullet
+		
+		
 		%engageAir = true
 		%engageMissile = false
 		%engageGround = false
@@ -18,6 +22,9 @@
     @description = The General Electric M61A1 six-barrel, air-cooled, electrically fired Gatling-style rotary cannon widely used in military aircraft of the USAF.
 	@MODULE[ModuleWeapon] {
 		%shortName = 20mm M61A1
+		
+		%useCustomBelt = True
+		%ammoBelt = 20x102mmHEBullet; 20x102mmHEBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -65,6 +72,9 @@
 	@title = AN/M3 HMG
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm AN/M3 HMG
+		
+		%useCustomBelt = True  
+		%ammoBelt = 12.7mmAP; 12.7mmAP; 12.7mmAP; 12.7x99mmBullet; 12.7x99mmBullet;
 
 		%engageAir = true
 		%engageMissile = false
@@ -94,6 +104,9 @@
     @description = The General Electric GAU-8/A Avenger 30mm hydraulically driven seven-barrel Gatling-style cannon that is typically mounted in the A-10 Thunderbolt II, designed specifically for the anti-tank role,
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm GAU-8/A
+		
+		%useCustomBelt = True
+		%ammoBelt = 30x173Bullet; 30x173Bullet; 30x173HEBullet; 30x173HEBullet;
 	
 		%engageAir = true
 		%engageMissile = false
@@ -193,6 +206,9 @@
 	@description = The Hughes M230 Chain Gun 30 mm single-barrel chain-driven auto-cannon, using external electrical power to cycle the weapon between shots. The M230 Chain Gun is the "Area Weapon System" on the Boeing AH-64 Apache and MH-60L Direct Action Penetrator (DAP). The M230 is mounted on the chin turret. It uses a 1.5 kW electric motor to fire 30 mm link-less ammunition at a rate of 625±25 rounds per minute.
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm M230
+		
+		%useCustomBelt = True
+		%ammoBelt = 30x173Bullet; 30x173Bullet; 30x173Bullet; 30x173HEBullet;
 	}
 }
 @PART[bahaAGM-65]:NEEDS[SMA]:FOR[KKA] {
