Balance: 40s tank and naval turrets.

--- a/EW/Balancing/MM_FDC.cfg
+++ b/EW/Balancing/MM_FDC.cfg
@@ -30,12 +30,31 @@
 @PART[T26E4]:NEEDS[SMA] {
 	@title = M26E4 Pershing
 	-MODULE[ModuleRadar] {}
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 12
+	}
+	@MODULE[ModuleWeapon] {
+		@maxDeviation = 0.04294
+		@maxEffectiveDistance = 6000
+		@maxTargetingRange = 6200
+	}
 }
 @PART[AbramsA2]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
 }
 @PART[AMT34]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 14
+	}
+	@MODULE[ModuleWeapon] {
+
+		@maxDeviation = 0.041
+		@maxEffectiveDistance = 6000
+		@maxTargetingRange = 6200
+	}
 }
 @PART[Amx50B]:NEEDS[SMA] {
 	@title = AMX 50B
@@ -57,12 +76,6 @@
 	-MODULE[ModuleRadar] {}
 }
 @PART[HSTV]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[IS2]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[IS7]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
 }
 @PART[Leopard1]:NEEDS[SMA] {
@@ -96,15 +109,51 @@
 }
 @PART[T95]:NEEDS[SMA] {
 	@title = T28 Super Heavy Tank
+	
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 4.5
+		@maxDeviation = 0.0425
+		@maxEffectiveDistance = 5000
+		@maxTargetingRange = 5200
+	}
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 15
+	}
 }
 @PART[T92HMC]:NEEDS[SMA] {
 	@title = T92 HMC
+	
+	@MODULE[ModuleWeapon] {
+
+		@roundsPerMinute = 1.5
+		@maxDeviation = 0.025
+	}
 }
 @PART[TortoiseAPCBC]:NEEDS[SMA] {
 	@title = A39 Tortoise
+
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 5
+		@maxDeviation = 0.041
+		@maxEffectiveDistance = 5000
+		@maxTargetingRange = 5200
+	}
+	
 }
 @PART[PantherII]:NEEDS[SMA] {
 	@title = Panther II
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 25
+	}
+	@MODULE[ModuleWeapon] {
+		@maxDeviation = 0.041
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
+		
+		@bulletType = 75mmStrv74HE, 75mmStrv74APCBC, 75MMAPFDS
+	}
 }
 @PART[Luft42]:NEEDS[SMA] {
 	@MODULE[ModuleWeapon] {
@@ -114,6 +163,28 @@
 }
 
 
+@PART[ARL44]:NEEDS[SMA] {
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 18
+	}
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 5
+		@maxDeviation = 0.0437
+		@maxEffectiveDistance = 4000
+		@maxTargetingRange = 4300
+	}
+}
+@PART[TigerII]:NEEDS[SMA] {
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 14
+	}
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 4
+		@maxDeviation = 0.0405
+		@maxEffectiveDistance = 4500
+		@maxTargetingRange = 4800
+	}
+}
 
 
 @PART[BMP3HE]:NEEDS[SMA] {
@@ -126,15 +197,36 @@
 @PART[IS2]:NEEDS[SMA] {
 	@title = 52PT471 (IS-2)
 	@description = The Object 240 / IS-122 / IS-2 heavy tank turret armed with the 52PT471 / D-25T 122mm gun. IS-2 went into service in April 1944 and was used as a spearhead by the Red Army in the final stage of the Battle of Berlin.
+	
+	-MODULE[ModuleRadar] {}
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 25
+	}
+	
 	@MODULE[ModuleWeapon] {
 		%shortName = 122mm 52PT471
+		
+		@roundsPerMinute = 5.5
+		@maxDeviation = 0.0413
+		@maxEffectiveDistance = 4000
+		@maxTargetingRange = 4200
 	}
 }
 @PART[IS7]:NEEDS[SMA] {
 	@title = S-70 (IS-7)
 	@description = The Object 260 / IS-7 heavy tank turret armed with the S-70 130mm gun, is a Soviet tank that began development in 1945. The vehicle existed only in prototype form and was cancelled in favor of the T-10 tank.
+	
+	-MODULE[ModuleRadar] {}
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 14
+	}
 	@MODULE[ModuleWeapon] {
 		%shortName = 130mm S-70
+		
+		@roundsPerMinute = 5
+		@maxDeviation = 0.0463
+		@maxEffectiveDistance = 5500
+		@maxTargetingRange = 5700
 	}
 }
 @PART[Obj268]:NEEDS[SMA] {
@@ -163,16 +255,33 @@
 	@title = ZIS-S-53 (T-44)
 	@description = The Object 136 / T-44 medium tank is first developed and produced near the end of World War II by the Soviet Union. It was the successor to the T-34, offering improved ride and cross-country performance and much greater armor. Designed to be equipped with an 85 mm main gun, by the time it was fully tested the T-34 had also moved to this weapon. Both tanks offered similar performance, so introducing the T-44 was not considered as important as increasing T-34 production. Fewer than 2,000 T-44s were built, compared to about 58,000 T-34s. Although the T-44 was available by the end of the war, it was not used in combat.
 	-MODULE[ModuleRadar] {}
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 20
+	}
 	@MODULE[ModuleWeapon] {
 		%shortName = 85mm ZIS-S-53
+		
+		@roundsPerMinute = 5
+		@maxDeviation = 0.0423
+		@maxEffectiveDistance = 2500
+		@maxTargetingRange = 2800
 	}
 }
 @PART[T-54]:NEEDS[SMA] {
 	@title = 52PT412 (T-54)
 	@description = The Object 137 / T-54 medium tank turret armed with 52PT412 / D-10T 100mm gun. T-54 / T-55 tanks are a series of Soviet main battle tanks introduced in the years following the Second World War. The first T-54 prototype was completed at Nizhny Tagil by the end of 1945.
 	-MODULE[ModuleRadar] {}
+	
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 18
+	}
 	@MODULE[ModuleWeapon] {
 		%shortName = 100mm 52PT412
+		
+		@roundsPerMinute = 4.5
+		@maxDeviation = 0.043
+		@maxEffectiveDistance = 2800
+		@maxTargetingRange = 3000
 	}
 }
 @PART[T-64]:NEEDS[SMA] {
