--- a/Missiles/sam_MIM3.cfg
+++ b/Missiles/sam_MIM3.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = MIM-3 Nike Ajax
 	manufacturer = Kerbal Kombat Anthology
-	description = The Bell and Douglas MIM-3 "Nike Ajax" Medium-Range Surface-to-Air Missile is the world's first operational SAM entering service in 1954. Nike Ajax was designed to attack conventional bomber aircraft flying at high subsonic speeds and altitudes above 15 km.
+	description = The Bell and Douglas MIM-3 "Nike Ajax" Medium-Range Surface-to-Air Missile is the world's first operational SAM entering service in 1954. Nike Ajax was designed to attack conventional bomber aircraft flying at high subsonic speeds and altitudes above 15 km. Warranty void if launched non-vertically.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
